--- a/2015/day04/Cargo.toml
+++ b/2015/day04/Cargo.toml
@@ -1,14 +1,10 @@
 [package]
-name = "aoc2015"
+name = "day04"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-[workspace]
-members = [
-    "common",
-    "day01",
-    "day02",
-    "day03",
-    "day04",
-]
+
+[dependencies]
+common = {path="../common"}
+md5 = "0.7.0"
