--- a/2023/day02/Cargo.toml
+++ b/2023/day02/Cargo.toml
@@ -1,13 +1,9 @@
 [package]
-name = "aoc2023"
+name = "day02"
 version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
-[workspace]
-members = [
-    "common",
-    "day01",
-    "day02",
-]
+[dependencies]
+common = {path="../common"}
